# oxide

./: .envrc  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main  main.cpp  main.py  pyproject.toml
cmd/: bind  cb  dist  memtest  run  runpy
python/oxide/: __init__.py  system.py  tensor.py
python/py_oxide/: __init__.py  system.py  typeutil.py
src/: backend.cpp  binding.cpp  dispatcher.cpp  functions.cpp  oxide.cpp  oxide.hpp  shader.metal  tensor.cpp  typeutil.cpp
src/include/: backend.hpp  dispatcher.hpp  functions.hpp  oxide.hpp  tensor.hpp  typeutil.hpp
tests/: speed.py
