[build-system]
requires = ["setuptools>=82", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-oxide"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    
]

[tool.setuptools]
package-dir = {"" = "python"}
packages = ["py_oxide"]

[tool.setuptools.package-data]
"py_oxide" = ["*.so"]